# github-tui

./: LICENSE  README.md  flake.nix  pyproject.toml  setup.cfg
.github/workflows/: release.yaml
github_tui/: __main__.py  app.py  github.py  screens.py
github_tui/widgets/: __init__.py  github.py  ui.py
textual_github/: __main__.py  app.py  github.py  screens.py  styles.css  widgets.py
textual_github/widgets/: __init__.py  github.py  ui.py
