[metadata]
name = github-tui
version = attr: github_tui.__version__
description = Github TUI for issues, notifications, discussions, and PR management
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
author = Christopher Ostrouchov
author_email = chris.ostrouchov@gmail.com
url = https://github.com/costrouc/github-tui
keywords = github tui
license = BSD License
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  Topic :: Software Development :: Build Tools
  License :: OSI Approved :: BSD License
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only
project_urls =
  Bug Reports = https://github.com/costrouc/github-tui
  Documentation = https://github.com/quansight/conda-store
  Source = https://conda-store.readthedocs.io/

[options.package_data]
github_tui = styles.css

[options]
zip_safe = True
packages = find:
install_requires =
  textual
  PyGithub

[options.entry_points]
console_scripts =
    github-tui=github_tui.__main__:main

[options.extras_require]
dev = black; flake8;

[options.packages.find]
exclude =
    tests

[flake8]
ignore = E203, E266, E501, W503
max-line-length = 89
exclude =
  .git,
  __pycache__,
